Started creating PowerPlant class, and the methods for connecting to the database server to get the data from the PowerPlant database. Will need to change the methods from sqlite3 to mysql.

--- a/RobotsTestingCode.ipynb
+++ b/RobotsTestingCode.ipynb
@@ -99,15 +99,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
-    "# What libraries / functions do we need to import? Put them in here.\n"
+    "# What libraries / functions do we need to import? Put them in here.\n",
+    "\n",
+    "import mysql.connector\n",
+    "from mysql.connector import Error\n",
+    "\n",
+    "from databaseConnection import create_db_connection, read_query\n"
    ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-19T20:06:19.207232Z",
+     "start_time": "2023-10-19T20:06:19.128675100Z"
+    }
+   },
+   "id": "74cd89062475ebbb"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "74cd89062475ebbb"
+   "id": "be542e6759f169e5"
   },
   {
    "cell_type": "code",
@@ -133,7 +150,8 @@
    "outputs": [],
    "source": [
     "# Power plant auction\n",
-    "# I need a database with power plants in for this...."
+    "# I have a database - 'powerplants' - on my mysql server. \n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false
