--- a/RobotsTestingCode.ipynb
+++ b/RobotsTestingCode.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# What libraries / functions do we need to import? Put them in here.\n",
@@ -107,14 +107,11 @@
     "import mysql.connector\n",
     "from mysql.connector import Error\n",
     "\n",
-    "from databaseConnection import create_db_connection, read_query\n"
+    "from databaseConnection import create_db_connection, read_query\n",
+    "\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-19T20:06:19.207232Z",
-     "start_time": "2023-10-19T20:06:19.128675100Z"
-    }
+    "collapsed": false
    },
    "id": "74cd89062475ebbb"
   },
@@ -128,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "# Set the starting variables\n",
@@ -136,27 +133,188 @@
     "robotMoney = 50\n",
     "mapName = \"Japan\"\n",
     "powerPlantDeck = \"standard\"\n",
+    "step = 1\n",
+    "\n",
+    "# Database access details:\n",
+    "user_name = \"Chris\"\n",
+    "user_password = input(\"Please give the password for Chris\")\n",
+    "\n",
+    "\n",
     "\n",
     "# We will also need to set the robot options, but we'll code those later on"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-20T21:18:41.106291700Z",
+     "start_time": "2023-10-20T21:18:41.085061900Z"
+    }
    },
    "id": "c563907825c6c707"
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Harry has: Money = 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Actually, we should initialise the instance of the Robot, so that it has money for the auction phase.\n",
+    "\n",
+    "from robotClass import Robot\n",
+    "\n",
+    "robot = Robot(robotMoney)\n",
+    "\n",
+    "Robot.setRobotName(robot)\n",
+    "\n",
+    "print(robot)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-20T21:18:47.078310200Z",
+     "start_time": "2023-10-20T21:18:44.767871900Z"
+    }
+   },
+   "id": "13f0b956e69f7b60"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Market size is 8, because it is step 1.\n",
+      "MySQL Database connection successful\n",
+      "[1, 2, 3, 4, 5, 6, 8, 11]\n",
+      "Cost: 2, Type: Oil, Resource: oil, Resource2: None, PowerCost: 2, CitiesPowered: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Phase 2: Power plant auction - create the power plant market\n",
+    "\n",
+    "from powerPlants import PowerPlant, createMarket\n",
+    "\n",
+    "# We ask the user to tell us the costs of the current power plants in the market:\n",
+    "listOfPowerPlants = createMarket(step)\n",
+    "\n",
+    "power_plants = PowerPlant.updatePowerPlantMarket(user_name, user_password, listOfPowerPlants)\n",
+    "\n",
+    "# We print some details to see what we have got.\n",
+    "print(listOfPowerPlants)\n",
+    "print(power_plants[1])\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-20T21:19:08.277743900Z",
+     "start_time": "2023-10-20T21:18:52.686904500Z"
+    }
+   },
+   "id": "55fa09fa3ddbf334"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The current market is [1, 2, 3, 4]\n",
+      "MySQL Database connection successful\n",
+      "I bid 2 electros for power plant 2.\n",
+      "Ok, I pass on 2.\n",
+      "The current market is [1, 3, 4, 5]\n",
+      "I bid 3 electros for power plant 3.\n",
+      "Ok, I pass on 3.\n",
+      "The current market is [1, 4, 5, 6]\n",
+      "I bid 4 electros for power plant 4.\n",
+      "Ok, I pass on 4.\n",
+      "The current market is [1, 5, 6, 8]\n",
+      "I bid 5 electros for power plant 5.\n",
+      "Ok, I will buy power plant 5 for 5 electros\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now we will bid on some power plants\n",
+    "# We will start with the robot rule 'second smallest number'\n",
+    "\n",
+    "# If I have a mix of 'print' and 'input' messages, the printed messages appear below this block, while the input\n",
+    "# messages appear in a box. This is confusing and hides some of the information I am trying to communicate.\n",
+    "# But if I switch it all to 'input' then no details are output below the block for me to read on later.\n",
+    "# hmmm......\n",
+    "\n",
+    "# The robot will ask if it is their turn.\n",
+    "myTurn = input(\"Is it my turn to choose a power plant to bid on? Y or N?\")\n",
+    "\n",
+    "# If it is step 1 or 2, we need to split the existing market into the current and future market.\n",
+    "# If it is step 3, then all 6 power plants are in the current market\n",
+    "# Only the current market is of interest to the robot.\n",
+    "\n",
+    "def createCurrentMarket(listOfPowerPlants):    \n",
+    "    if step == 3:\n",
+    "        currentMarket = listOfPowerPlants\n",
+    "    else:\n",
+    "        listOfPowerPlants.sort()\n",
+    "        currentMarket = listOfPowerPlants[:-4]\n",
+    "        \n",
+    "    return currentMarket\n",
+    "\n",
+    "currentMarket = createCurrentMarket(listOfPowerPlants)\n",
+    "print(f\"The current market is {currentMarket}\")\n",
+    "\n",
+    "currentMarketDetails = PowerPlant.updatePowerPlantMarket(user_name, user_password, currentMarket)\n",
+    "\n",
+    "if myTurn.lower() == \"y\":\n",
+    "    choose = True\n",
+    "    while choose:\n",
+    "        choice = currentMarket[1]\n",
+    "        print(f\"I bid {choice} electros for power plant {choice}.\")\n",
+    "        otherBid = input(f\"My bid is {choice} electros. Does anyone else want to bid on power plant {choice}? Y or N?\")\n",
+    "        if otherBid.lower() == \"y\":\n",
+    "            print(f\"Ok, I pass on {choice}.\")\n",
+    "            listOfPowerPlants.remove(choice)\n",
+    "            newPowerPlant = int(input(\"What is the cost of the new power plant you have drawn?\"))\n",
+    "            listOfPowerPlants.append(newPowerPlant)\n",
+    "            currentMarket = createCurrentMarket(listOfPowerPlants)\n",
+    "            print(f\"The current market is {currentMarket}\")\n",
+    "        elif otherBid.lower() == \"n\":\n",
+    "            choose = False\n",
+    "            print(f\"Ok, I will buy power plant {choice} for {choice} electros\")\n",
+    "            \n",
+    "# we need to create a function for the robot that buys the power plant\n",
+    "# that will reduce the money by the amount bid (which might not be the cost)\n",
+    "# and it will invoke a function to add the power plant to the list of power plants\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-20T21:20:11.995697200Z",
+     "start_time": "2023-10-20T21:19:34.823714900Z"
+    }
+   },
+   "id": "f9cb72fcd211bbfc"
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [
-    "# Power plant auction\n",
-    "# I have a database - 'powerplants' - on my mysql server. \n",
-    "\n"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "55fa09fa3ddbf334"
+   "id": "da6c14deb1122e48"
   }
  ],
  "metadata": {
