Adding venv folder.

--- a/RobotsTestingCode.ipynb
+++ b/RobotsTestingCode.ipynb
@@ -136,8 +136,8 @@
     "step = 1\n",
     "\n",
     "# Database access details:\n",
-    "user_name = \"Chris\"\n",
-    "user_password = input(\"Please give the password for Chris\")\n",
+    "user_name = input(\"Please give the user name for the database access.\")\n",
+    "user_password = input(f\"Please give the password for {user_name}\")\n",
     "\n",
     "\n",
     "\n",
