Lots of work on the code for Phase 3: Buying Resources. Methods for working out the resource shopping basket and the cost of that basket based on the current state of the resource market. Started work on algorithm for deciding what resources to buy if cost of shopping basket is greater than robot money.

--- a/RobotsTestingCode.ipynb
+++ b/RobotsTestingCode.ipynb
@@ -95,13 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "74cd89062475ebbb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-04T22:10:53.647600400Z",
-     "start_time": "2023-11-04T22:10:53.637620700Z"
-    }
+     "end_time": "2023-11-08T09:01:15.983728500Z",
+     "start_time": "2023-11-08T09:01:15.965692500Z"
+    },
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -111,7 +112,10 @@
     "from pyodbc import Error\n",
     "\n",
     "from databaseConnection import create_db_connection, read_query\n",
-    "\n"
+    "\n",
+    "from powerPlants import PowerPlant, createMarket\n",
+    "\n",
+    "from resourceMarket import resourceMarket"
    ]
   },
   {
@@ -122,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c563907825c6c707",
    "metadata": {
     "ExecuteTime": {
@@ -130,7 +134,16 @@
      "start_time": "2023-11-03T22:03:37.644936100Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please give the user name for the database access.Chris\n",
+      "Please give the password for ChrisT3sting0ut@H0me\n"
+     ]
+    }
+   ],
    "source": [
     "# Set the starting variables\n",
     "\n",
@@ -162,8 +175,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What should we call this robot?Bob\n",
-      "Bob has: Money = 50 and these powerplants: []\n"
+      "What should we call this robot?Sheila\n",
+      "Sheila has: Money = 50 and these powerplants: []\n"
      ]
     }
    ],
@@ -181,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "165a85c897f8dd66",
    "metadata": {
     "ExecuteTime": {
@@ -189,27 +202,9 @@
      "start_time": "2023-11-03T22:03:46.637967600Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Market size is 8, because it is step 1.\n",
-      "What is the cost of the next power plant in the market?1\n",
-      "What is the cost of the next power plant in the market?2\n",
-      "What is the cost of the next power plant in the market?3\n",
-      "What is the cost of the next power plant in the market?6\n",
-      "What is the cost of the next power plant in the market?8\n",
-      "What is the cost of the next power plant in the market?11\n",
-      "What is the cost of the next power plant in the market?16\n",
-      "What is the cost of the next power plant in the market?33\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Phase 2: Power plant auction - create the power plant market\n",
-    "\n",
-    "from powerPlants import PowerPlant, createMarket\n",
     "\n",
     "# We ask the user to tell us the costs of the current power plants in the market:\n",
     "listOfPowerPlants = createMarket(step)"
@@ -217,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "55fa09fa3ddbf334",
    "metadata": {
     "ExecuteTime": {
@@ -225,17 +220,7 @@
      "start_time": "2023-11-03T21:16:20.176824100Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MySQL Database connection successful\n",
-      "[1, 2, 3, 6, 8, 11, 16, 33]\n",
-      "Cost: 2, Type: Oil, Resource: oil, Resource2: None, PowerCost: 2, CitiesPowered: 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "power_plants = PowerPlant.updatePowerPlantMarket(user_name, user_password, listOfPowerPlants)\n",
@@ -247,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "f9cb72fcd211bbfc",
    "metadata": {
     "ExecuteTime": {
@@ -255,25 +240,7 @@
      "start_time": "2023-11-03T22:04:08.905703500Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Is it my turn to choose a power plant to bid on? Y or N?n\n",
-      "The current market is [6, 8, 11, 28]\n",
-      "I won't bid, so just tell me which power plant was bought. 6\n",
-      "What is the cost of the new power plant you have drawn? 40\n",
-      "Power plant 40 was drawn and the current market is [8, 11, 28, 28]\n",
-      "Is it now my turn to choose a power plant to bid on? Y or N? y\n",
-      "I bid 11 electros for power plant 11.\n",
-      "Does anyone else want to bid on power plant 11? Y or N? n\n",
-      "Ok, I will buy power plant 11 for 11 electros\n",
-      "I have spent 11 electros, and now I have 10 electros.\n",
-      "I now have these power plants: [6, 8, 11]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Now we will bid on some power plants\n",
     "# We will start with the robot rule 'second smallest number'\n",
@@ -356,23 +323,286 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "2a9f86f093422453",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-06T09:04:30.632128800Z",
+     "start_time": "2023-11-06T09:04:30.615537600Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I have spent 1 electros, and now I have 49 electros.\n",
+      "I now have these power plants: [1]\n",
+      "I have spent 2 electros, and now I have 47 electros.\n",
+      "I now have these power plants: [1, 2]\n",
+      "I have spent 11 electros, and now I have 36 electros.\n",
+      "I now have these power plants: [1, 2, 11]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# For testing purposes, let's populate the robot's powerplant list without doing the above tasks.\n",
+    "robot.powerPlants = []\n",
+    "robot.money = 50\n",
+    "\n",
+    "examplePowerPlants = (1, 2, 11)\n",
+    "\n",
+    "for choice in examplePowerPlants:\n",
+    "    Robot.deductRobotMoney(robot, choice)\n",
+    "    print(f\"I have spent {choice} electros, and now I have {robot.money} electros.\")\n",
+    "    Robot.addPowerplant(robot, choice)\n",
+    "    print(f\"I now have these power plants: {robot.powerPlants}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "da6c14deb1122e48",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-06T09:04:31.423421300Z",
+     "start_time": "2023-11-06T09:04:30.765945Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MySQL Database connection successful\n",
+      "Cost: 1, Type: Coal, Resource: coal, Resource2: None, PowerCost: 3, CitiesPowered: 1\n",
+      "Cost: 2, Type: Oil, Resource: oil, Resource2: None, PowerCost: 2, CitiesPowered: 1\n",
+      "Cost: 11, Type: Green, Resource: None, Resource2: None, PowerCost: 0, CitiesPowered: 1\n",
+      "Power plant 11 does not need any resource\n",
+      "The shopping basket has: {'coal': 3, 'oil': 2, 'garbage': 0, 'uranium': 0}\n"
+     ]
+    }
+   ],
    "source": [
     "# Now that the robot has a power plant, it needs to decide what resources to buy.\n",
     "# For now it will just buy basic resources to power the power plant for 1 turn.\n",
     "# It needs to know:\n",
     "# What is the price point of all the resources\n",
     "# What resources it already has\n",
-    "# "
+    "\n",
+    "# if there are x resources of type y, then the price of the next resource is a.\n",
+    "# if I organise it that way, then each time the robot buys 1 resource, we need to check\n",
+    "# the price of the next piece of resource.\n",
+    "# I might change that later - so let's make a separate function that is called\n",
+    "# to get the price of the resource.\n",
+    "\n",
+    "# Deciding what the robot needs to buy:\n",
+    "# We will start with a robot that only buys the basic requirements for \n",
+    "# the power plants they have - so they need to know:\n",
+    "# what resources do their power plants need?\n",
+    "# what resources do they have at the moment?\n",
+    "\n",
+    "# function - get info about the resources their power plants need\n",
+    "\n",
+    "currentRobotPowerPlants = PowerPlant.updateRobotPowerPlants(user_name, user_password, robot.powerPlants)\n",
+    "\n",
+    "for x in currentRobotPowerPlants:\n",
+    "    print(str(x))\n",
+    "\n",
+    "# Let's work out how much of each resource we want to buy\n",
+    "# Identify the type of resource and how many are needed.\n",
+    "# create a shopping basket that has each resource type and 0 for each value\n",
+    "\n",
+    "shoppingBasket = {'coal': 0, 'oil': 0, 'garbage': 0, 'uranium': 0}\n",
+    "\n",
+    "for x in currentRobotPowerPlants:\n",
+    "    try:\n",
+    "        shoppingBasket[getattr(x, 'resource')] += getattr(x, 'powerCost')\n",
+    "    except KeyError:\n",
+    "        print(f\"Power plant {getattr(x, 'cost')} does not need any resource\")\n",
+    "        \n",
+    "print(f\"The shopping basket has: {shoppingBasket}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "915ca87f525808ba",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The current resource market is: Coal 21; Oil 16; Garbage 9; Uranium 3.\n",
+      "MySQL Database connection successful\n",
+      "{'coal': {1: 8, 2: 8, 3: 8, 4: 7, 5: 7, 6: 7, 7: 6, 8: 6, 9: 6, 10: 5, 11: 5, 12: 5, 13: 4, 14: 4, 15: 4, 16: 3, 17: 3, 18: 3, 19: 2, 20: 2, 21: 2, 22: 1, 23: 1, 24: 1}, 'oil': {1: 8, 2: 8, 3: 8, 4: 7, 5: 7, 6: 7, 7: 6, 8: 6, 9: 6, 10: 5, 11: 5, 12: 5, 13: 4, 14: 4, 15: 4, 16: 3, 17: 3, 18: 3, 19: 2, 20: 2, 21: 2, 22: 1, 23: 1, 24: 1}, 'garbage': {1: 8, 2: 8, 3: 8, 4: 7, 5: 7, 6: 7, 7: 6, 8: 6, 9: 6, 10: 5, 11: 5, 12: 5, 13: 4, 14: 4, 15: 4, 16: 3, 17: 3, 18: 3, 19: 2, 20: 2, 21: 2, 22: 1, 23: 1, 24: 1}, 'uranium': {1: 16, 2: 14, 3: 12, 4: 10, 5: 8, 6: 7, 7: 6, 8: 5, 9: 4, 10: 3, 11: 2, 12: 1}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The Japan map starts with coal 2 Elektro, oil 4 Elektro, garbage 6 Elektro and uranium 12 Elektro\n",
+    "# So coal = 21; oil = 16; garbage = 9; uranium =3\n",
+    "\n",
+    "currentResourceMarket = resourceMarket(coal = 21, oil = 16, garbage = 9, uranium = 3)\n",
+    "\n",
+    "print(currentResourceMarket)\n",
+    "\n",
+    "# it will need to have a method for determining the cost of the next resource\n",
+    "# or perhaps a way to calculate how much buying x pieces of a resource would cost\n",
+    "# (because that will help the robot in deciding what to buy)\n",
+    "\n",
+    "# Because we are not tracking what resources the other players are buying, we should \n",
+    "# ask the player to tell us the current state of the resourceMarket at the \n",
+    "# point when the robot needs to buy resources. We will ask what the current price is, and \n",
+    "# how many resources in that bracket - to avoid the player having to count everything.\n",
+    "\n",
+    "connection = create_db_connection(\"localhost\", user_name, user_password, \"robots\")\n",
+    "\n",
+    "japanResourceMarket = {}\n",
+    "resources = ['coal', 'oil', 'garbage', 'uranium']\n",
+    "\n",
+    "for x in resources:\n",
+    "    query = f\"SELECT * FROM {x}\"\n",
+    "    result = read_query(connection, query)\n",
+    "    japanResourceMarket[x] = dict(result)\n",
+    "\n",
+    "print(japanResourceMarket)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "780bcb31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My shopping basket contains {'coal': 3, 'oil': 2, 'garbage': 0, 'uranium': 0}.\n",
+      "My shopping basket will cost 13 in total\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How much will 3 pieces of coal cost me?\n",
+    "\n",
+    "def multipleResourceCost(resource, number, currentResourceMarket):\n",
+    "    try:\n",
+    "        placeMarker = getattr(currentResourceMarket, resource)\n",
+    "    except TypeError:\n",
+    "        # This occurs when this function tries to get the resources that\n",
+    "        # a green powerplant needs. As it doesn't need any resources, we\n",
+    "        # will return 0\n",
+    "        print(\"Green power plants don't use resources.\")\n",
+    "        return 0\n",
+    "    cost = 0\n",
+    "    while number > 0:\n",
+    "        cost += japanResourceMarket[resource][placeMarker]\n",
+    "        placeMarker -= 1\n",
+    "        number -= 1\n",
+    "    return cost\n",
+    "\n",
+    "def totalBasketCost(shoppingBasket, currentResourceMarket):\n",
+    "    # I have specified the 4 resources because the basket may also include wind\n",
+    "    # which I don't want to try to check on the resource market for.\n",
+    "    resources = ['coal', 'oil', 'garbage', 'uranium']\n",
+    "    totalCost = 0\n",
+    "    for resource in resources:\n",
+    "        number = shoppingBasket[resource]\n",
+    "        totalCost += multipleResourceCost(resource, number, currentResourceMarket)\n",
+    "    return totalCost\n",
+    "\n",
+    "totalShoppingBasketCost = totalBasketCost(shoppingBasket, currentResourceMarket)\n",
+    "\n",
+    "print(f\"My shopping basket contains {shoppingBasket}.\")\n",
+    "print(f\"My shopping basket will cost {totalShoppingBasketCost} in total\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "35822584",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I have bought these resources: {'coal': 3, 'oil': 2, 'garbage': 0, 'uranium': 0}. Please remove them from the resource market.\n",
+      "My resources are now {'coal': 3, 'oil': 2, 'garbage': 0, 'uranium': 0}\n",
+      "My money is now 23\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now we have to decide if we will buy the resources or not. Let's start with 'yes'\n",
+    "\n",
+    "if totalShoppingBasketCost < robot.money:\n",
+    "    Robot.deductRobotMoney(robot, totalShoppingBasketCost)\n",
+    "    Robot.addResources(robot, shoppingBasket)\n",
+    "# else:\n",
+    "    # Now we need to decide what resources to take out of the basket.\n",
+    "    # First we decide which resources will power the most cities.\n",
+    "    # Note - this will become more complicated when we have resources left over\n",
+    "    # from previous rounds....\n",
+    "    # This is a sorting algorithm\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "# Because we are only updating the resource market just before the robot\n",
+    "# buys resources, we are not going to try to track the state of the resource\n",
+    "# market. The human players can do that.\n",
+    "print(f\"I have bought these resources: {shoppingBasket}. Please remove them from the resource market.\")\n",
+    "# We are not going to tell the human players how to distribute those resources on the power plant cards.\n",
+    "# The human players can do that themselves.\n",
+    "print(f\"My resources are now {robot.resources}\")\n",
+    "print(f\"My money is now {robot.money}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "a4427777",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Green power plants don't use resources.\n",
+      "The cost of each power plant is: [6, 7, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "testBasket = {'coal': 3, 'oil': 2, 'garbage': 0, 'uranium': 0}\n",
+    "testMoney = 10\n",
+    "totalShoppingBasketCost = totalBasketCost(testBasket, currentResourceMarket)\n",
+    "\n",
+    "# we want to work out the cost of each power plant\n",
+    "costList = []\n",
+    "for x in currentRobotPowerPlants:\n",
+    "    cost = multipleResourceCost(getattr(x, 'resource'), getattr(x, 'powerCost'), currentResourceMarket)\n",
+    "    costList.append(cost)\n",
+    "    \n",
+    "\n",
+    "print(f\"The cost of each power plant is: {costList}\")\n",
+    "\n",
+    "# TODO: we need to now use an algorithm to decide how many of these power plants we can afford\n",
+    "# to buy resources for with our existing money. We should aim to:\n",
+    "# 1: maximise cities powered\n",
+    "# 2: minimise cost of resources"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c74efa9",
+   "id": "2a24a6f9",
    "metadata": {},
    "outputs": [],
    "source": []
