Algorithm for the robot to decide what resources to buy if the total cost of resources is greater than the money it has.

--- a/RobotsTestingCode.ipynb
+++ b/RobotsTestingCode.ipynb
@@ -99,8 +99,8 @@
    "id": "74cd89062475ebbb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-08T09:01:15.983728500Z",
-     "start_time": "2023-11-08T09:01:15.965692500Z"
+     "end_time": "2023-11-11T20:59:09.052239200Z",
+     "start_time": "2023-11-11T20:59:09.038352800Z"
     },
     "scrolled": true
    },
@@ -115,7 +115,9 @@
     "\n",
     "from powerPlants import PowerPlant, createMarket\n",
     "\n",
-    "from resourceMarket import resourceMarket"
+    "from resourceMarket import resourceMarket\n",
+    "\n",
+    "# import pwinput as pin"
    ]
   },
   {
@@ -130,8 +132,7 @@
    "id": "c563907825c6c707",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-03T22:03:37.655978300Z",
-     "start_time": "2023-11-03T22:03:37.644936100Z"
+     "start_time": "2023-11-09T18:44:34.421431800Z"
     }
    },
    "outputs": [
@@ -152,10 +153,17 @@
     "powerPlantDeck = \"standard\"\n",
     "step = 1\n",
     "\n",
+    "# Security note - public versions of this will not be asking for log in details to a database, as\n",
+    "# the people using it wouldn't have those credentials. This is only for development purposes while\n",
+    "# I play with the code.\n",
     "# Database access details:\n",
     "user_name = input(\"Please give the user name for the database access.\")\n",
     "user_password = input(f\"Please give the password for {user_name}\")\n",
     "\n",
+    "# user_password = pin.pwinput(prompt = f\"Please give the password for {user_name}\", mask = '*')\n",
+    "# This doesn't work with jupyter notebooks - the prompt appears but the cursor moves on to the next\n",
+    "# cell and it is not possible to enter in the password. I have not found anything about this issue\n",
+    "# on stackoverflow or by Googling - which surprises me.\n",
     "\n",
     "# We will also need to set the robot options, but we'll code those later on"
    ]
@@ -175,8 +183,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What should we call this robot?Sheila\n",
-      "Sheila has: Money = 50 and these powerplants: []\n"
+      "What should we call this robot?Harriet\n",
+      "Harriet has: Money = 50 and these powerplants: []\n"
      ]
     }
    ],
@@ -336,21 +344,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I have spent 1 electros, and now I have 49 electros.\n",
-      "I now have these power plants: [1]\n",
-      "I have spent 2 electros, and now I have 47 electros.\n",
-      "I now have these power plants: [1, 2]\n",
-      "I have spent 11 electros, and now I have 36 electros.\n",
-      "I now have these power plants: [1, 2, 11]\n"
+      "I have spent 3 electros, and now I have 97 electros.\n",
+      "I now have these power plants: [3]\n",
+      "I have spent 33 electros, and now I have 64 electros.\n",
+      "I now have these power plants: [3, 33]\n",
+      "I have spent 28 electros, and now I have 36 electros.\n",
+      "I now have these power plants: [3, 33, 28]\n"
      ]
     }
    ],
    "source": [
     "# For testing purposes, let's populate the robot's powerplant list without doing the above tasks.\n",
     "robot.powerPlants = []\n",
-    "robot.money = 50\n",
+    "robot.money = 100\n",
     "\n",
-    "examplePowerPlants = (1, 2, 11)\n",
+    "examplePowerPlants = (3, 33, 28)\n",
     "\n",
     "for choice in examplePowerPlants:\n",
     "    Robot.deductRobotMoney(robot, choice)\n",
@@ -361,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "da6c14deb1122e48",
    "metadata": {
     "ExecuteTime": {
@@ -375,11 +383,10 @@
      "output_type": "stream",
      "text": [
       "MySQL Database connection successful\n",
-      "Cost: 1, Type: Coal, Resource: coal, Resource2: None, PowerCost: 3, CitiesPowered: 1\n",
-      "Cost: 2, Type: Oil, Resource: oil, Resource2: None, PowerCost: 2, CitiesPowered: 1\n",
-      "Cost: 11, Type: Green, Resource: None, Resource2: None, PowerCost: 0, CitiesPowered: 1\n",
-      "Power plant 11 does not need any resource\n",
-      "The shopping basket has: {'coal': 3, 'oil': 2, 'garbage': 0, 'uranium': 0}\n"
+      "Cost: 3, Type: Coal, Resource: coal, Resource2: None, PowerCost: 1, CitiesPowered: 1\n",
+      "Cost: 33, Type: Garbage, Resource: garbage, Resource2: None, PowerCost: 2, CitiesPowered: 5\n",
+      "Cost: 28, Type: Coal, Resource: coal, Resource2: None, PowerCost: 3, CitiesPowered: 5\n",
+      "The shopping basket has: {'coal': 4, 'oil': 0, 'garbage': 2, 'uranium': 0}\n"
      ]
     }
    ],
@@ -419,14 +426,15 @@
     "    try:\n",
     "        shoppingBasket[getattr(x, 'resource')] += getattr(x, 'powerCost')\n",
     "    except KeyError:\n",
-    "        print(f\"Power plant {getattr(x, 'cost')} does not need any resource\")\n",
+    "        # Green power plants do not have a 'resource', so they return an error\n",
+    "        print(f\"Power plant {getattr(x, 'cost')} does not need any resources.\")\n",
     "        \n",
     "print(f\"The shopping basket has: {shoppingBasket}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "915ca87f525808ba",
    "metadata": {
     "scrolled": true
@@ -474,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "780bcb31",
    "metadata": {},
    "outputs": [
@@ -482,8 +490,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "My shopping basket contains {'coal': 3, 'oil': 2, 'garbage': 0, 'uranium': 0}.\n",
-      "My shopping basket will cost 13 in total\n"
+      "My shopping basket contains {'coal': 4, 'oil': 0, 'garbage': 2, 'uranium': 0}.\n",
+      "My shopping basket will cost 21 in total\n"
      ]
     }
    ],
@@ -525,20 +533,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "35822584",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I have bought these resources: {'coal': 3, 'oil': 2, 'garbage': 0, 'uranium': 0}. Please remove them from the resource market.\n",
-      "My resources are now {'coal': 3, 'oil': 2, 'garbage': 0, 'uranium': 0}\n",
-      "My money is now 23\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Now we have to decide if we will buy the resources or not. Let's start with 'yes'\n",
     "\n",
@@ -558,6 +556,7 @@
     "# buys resources, we are not going to try to track the state of the resource\n",
     "# market. The human players can do that.\n",
     "print(f\"I have bought these resources: {shoppingBasket}. Please remove them from the resource market.\")\n",
+    "\n",
     "# We are not going to tell the human players how to distribute those resources on the power plant cards.\n",
     "# The human players can do that themselves.\n",
     "print(f\"My resources are now {robot.resources}\")\n",
@@ -566,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "id": "a4427777",
    "metadata": {},
    "outputs": [
@@ -574,35 +573,121 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Green power plants don't use resources.\n",
-      "The cost of each power plant is: [6, 7, 0]\n"
+      "The cost of each power plant is: [{'cost': 3, 'powerCost': 1, 'resourceCost': 2, 'cities': 1, 'resource': 'coal'}, {'cost': 33, 'powerCost': 2, 'resourceCost': 12, 'cities': 5, 'resource': 'garbage'}, {'cost': 28, 'powerCost': 3, 'resourceCost': 6, 'cities': 5, 'resource': 'coal'}]\n",
+      "\n",
+      "The cost of each remaining power plant is: [{'cost': 3, 'powerCost': 1, 'resourceCost': 2, 'cities': 1, 'resource': 'coal'}, {'cost': 33, 'powerCost': 2, 'resourceCost': 12, 'cities': 5, 'resource': 'garbage'}]\n",
+      "The chosen power plants are: [{'cost': 28, 'powerCost': 3, 'resourceCost': 6, 'cities': 5, 'resource': 'coal'}]\n",
+      "The current resource market is: The current resource market is: Coal 18; Oil 16; Garbage 9; Uranium 3.\n",
+      "The remaining money is: 13\n",
+      "\n",
+      "The cost of each remaining power plant is: [{'cost': 3, 'powerCost': 1, 'resourceCost': 3, 'cities': 1, 'resource': 'coal'}]\n",
+      "The chosen power plants are: [{'cost': 28, 'powerCost': 3, 'resourceCost': 6, 'cities': 5, 'resource': 'coal'}, {'cost': 33, 'powerCost': 2, 'resourceCost': 12, 'cities': 5, 'resource': 'garbage'}]\n",
+      "The current resource market is: The current resource market is: Coal 18; Oil 16; Garbage 7; Uranium 3.\n",
+      "The remaining money is: 1\n",
+      "\n",
+      "The cost of each remaining power plant is: []\n",
+      "The chosen power plants are: [{'cost': 28, 'powerCost': 3, 'resourceCost': 6, 'cities': 5, 'resource': 'coal'}, {'cost': 33, 'powerCost': 2, 'resourceCost': 12, 'cities': 5, 'resource': 'garbage'}]\n",
+      "The current resource market is: The current resource market is: Coal 18; Oil 16; Garbage 7; Uranium 3.\n",
+      "The remaining money is: 1\n",
+      "\n",
+      "The sorted list is: []\n",
+      "The chosen power plants are: [{'cost': 28, 'powerCost': 3, 'resourceCost': 6, 'cities': 5, 'resource': 'coal'}, {'cost': 33, 'powerCost': 2, 'resourceCost': 12, 'cities': 5, 'resource': 'garbage'}]\n",
+      "The current resource market is: The current resource market is: Coal 18; Oil 16; Garbage 7; Uranium 3.\n",
+      "The remaining money is: 1\n"
      ]
     }
    ],
    "source": [
-    "testBasket = {'coal': 3, 'oil': 2, 'garbage': 0, 'uranium': 0}\n",
-    "testMoney = 10\n",
-    "totalShoppingBasketCost = totalBasketCost(testBasket, currentResourceMarket)\n",
+    "testMoney = 19\n",
     "\n",
-    "# we want to work out the cost of each power plant\n",
-    "costList = []\n",
-    "for x in currentRobotPowerPlants:\n",
-    "    cost = multipleResourceCost(getattr(x, 'resource'), getattr(x, 'powerCost'), currentResourceMarket)\n",
-    "    costList.append(cost)\n",
+    "def workOutResourceCost(currentRobotPowerPlants):\n",
+    "    # we want to work out the cost of each power plant\n",
+    "    resourceCostList = []\n",
+    "    for x in currentRobotPowerPlants:\n",
+    "        resourceCost = multipleResourceCost(getattr(x, 'resource'), getattr(x, 'powerCost'), currentResourceMarket)\n",
+    "        resourceCostList.append({'cost': getattr(x, 'cost'), 'powerCost': getattr(x, 'powerCost'), 'resourceCost': resourceCost, 'cities': getattr(x, 'citiesPowered'), 'resource': getattr(x, 'resource')}) \n",
+    "    return resourceCostList\n",
+    "\n",
+    "\n",
+    "def removeGreenPlants(resourceCostList):\n",
+    "    chosenPowerPlants = []\n",
+    "    plants_to_remove = []\n",
+    "\n",
+    "    # remove green power plants with a resource cost of 0 so that we don't divide by 0\n",
+    "    for i, plant in enumerate(resourceCostList):\n",
+    "         if plant['resourceCost'] == 0:\n",
+    "            chosenPowerPlants.append(plant)\n",
+    "            plants_to_remove.append(i)\n",
+    "\n",
+    "    for index in reversed(plants_to_remove):\n",
+    "        resourceCostList.pop(index)\n",
+    "    return chosenPowerPlants, resourceCostList\n",
+    "        \n",
+    "\n",
+    "def sortPlantsByResourceCost(resourceCostList):\n",
+    "    sortedResourceCostList = sorted(resourceCostList, key=lambda plant: plant['cities'] / plant['resourceCost'], reverse=True)\n",
+    "    return sortedResourceCostList\n",
+    "\n",
+    "# TODO: amend 'testMoney' in this function to call the money the robot currently has\n",
+    "def checkIfCanBuyResources(amendedResourceCostList, chosenPowerPlants, testMoney, currentResourceMarket):    \n",
+    "    plant = amendedResourceCostList[0]\n",
+    "    # add this power plant to our chosen list if we can afford the resources\n",
+    "    if plant['resourceCost'] <= testMoney:\n",
+    "        chosenPowerPlants.append(plant)\n",
+    "        testMoney -= plant['resourceCost']\n",
+    "        # We update the currentResourceMarket with a class method\n",
+    "        # that uses the resource key word to adjust the right resource.\n",
+    "        # 'powerCost' = the amount of that resource the power plant spends\n",
+    "        resourceMarket.deductResource(currentResourceMarket, plant['powerCost'], plant['resource'])\n",
+    "    # remove this power plant from the list we are checking\n",
+    "    amendedResourceCostList.pop(0)\n",
+    "    return amendedResourceCostList, chosenPowerPlants, testMoney, currentResourceMarket\n",
+    "\n",
+    "\n",
+    "### The steps for the robot to decide what resources to buy:\n",
+    "\n",
+    "### STEP 1: get a list with resource costs for the power plants.\n",
+    "\n",
+    "resourceCostList = workOutResourceCost(currentRobotPowerPlants)\n",
+    "        \n",
+    "print(f\"The cost of each power plant is: {resourceCostList}\")      \n",
+    "\n",
+    "### STEP 2: remove any green power plants from that list.\n",
+    "\n",
+    "chosenPowerPlants, amendedResourceCostList = removeGreenPlants(resourceCostList)\n",
+    "\n",
+    "### STEP 3: The while loop\n",
+    "\n",
+    "while len(amendedResourceCostList) > 0:\n",
+    "    # We start by amending the resource costs for the remaining power plants - this doesn't matter the first time\n",
+    "    # but it is a short list and won't take much time.\n",
+    "    for plant in amendedResourceCostList: \n",
+    "        plant['resourceCost'] = multipleResourceCost(plant['resource'], plant['powerCost'], currentResourceMarket)\n",
     "    \n",
+    "    # Sort the remaining power plants by cost to buy the resources they need\n",
+    "    amendedResourceCostList = sortPlantsByResourceCost(amendedResourceCostList)\n",
+    "    \n",
+    "    # check the first power plant on the list, and remove it\n",
+    "    # we also amend the currentResourceMarket and the testMoney levels\n",
+    "    amendedResourceCostList, chosenPowerPlants, testMoney, currentResourceMarket = checkIfCanBuyResources(amendedResourceCostList, chosenPowerPlants, testMoney, currentResourceMarket)\n",
+    "    \n",
+    "    print(f\"\\nThe cost of each remaining power plant is: {amendedResourceCostList}\") \n",
+    "    print(f\"The chosen power plants are: {chosenPowerPlants}\")\n",
+    "    print(f\"The current resource market is: {currentResourceMarket}\")\n",
+    "    print(f\"The remaining money is: {testMoney}\")\n",
     "\n",
-    "print(f\"The cost of each power plant is: {costList}\")\n",
     "\n",
-    "# TODO: we need to now use an algorithm to decide how many of these power plants we can afford\n",
-    "# to buy resources for with our existing money. We should aim to:\n",
-    "# 1: maximise cities powered\n",
-    "# 2: minimise cost of resources"
+    "print(f\"\\nThe sorted list is: {amendedResourceCostList}\")\n",
+    "print(f\"The chosen power plants are: {chosenPowerPlants}\")\n",
+    "print(f\"The current resource market is: {currentResourceMarket}\")\n",
+    "print(f\"The remaining money is: {testMoney}\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a24a6f9",
+   "id": "8f9d624d",
    "metadata": {},
    "outputs": [],
    "source": []
